--- a/src/app/views/emails/welcome.hbs
+++ b/src/app/views/emails/welcome.hbs
@@ -1,3 +1,5 @@
-<strong>teste</strong>
-{{firstDay}}</br>
-{{lastDay}}
+<strong>Matrícula realizada com sucesso</strong>
+<p>{{name}}, seja bem-vindo(a) ao Gympoint.</p>
+<p>Você escolheu o plano <strong>{{title}}</strong>,
+com duração de <strong>{{duration}}mês(meses)</strong>.
+Totalizando R$ {{price}}</p>
