--- a/src/app/views/emails/welcome.hbs
+++ b/src/app/views/emails/welcome.hbs
@@ -1,5 +1,5 @@
-<strong>Matrícula realizada com sucesso</strong>
-<p>{{name}}, seja bem-vindo(a) ao Gympoint.</p>
-<p>Você escolheu o plano <strong>{{title}}</strong>,
-com duração de <strong>{{duration}} meses</strong>.
-Totalizando R$ {{price}}</p>
+<p><strong>{{name}}, welcome to Gympoint</strong> - Registration has been approved !!!</br>
+Your plan: <strong>{{title}}</strong> totalizing: <strong>R$ {{price}}</strong></br>
+You start on: <strong>{{firstDay}}</strong></br>
+Your register end on: <strong>{{lastDay}}</strong>
+</p>
