--- a/src/app/views/emails/partials/footer.hbs
+++ b/src/app/views/emails/partials/footer.hbs
@@ -1,1 +1,10 @@
-<p>Sincerely, Gympoint Team</p>
+<style>
+footer {
+    margin-top:50px;
+    display:flex ;
+    justify-content: center;
+    font-size:13px;
+    font-weight: bold;
+  }
+</style>
+<footer><small>Atenciosamente, equipe Gympoint.</small></footer>
