--- a/src/app/views/emails/welcome.hbs
+++ b/src/app/views/emails/welcome.hbs
@@ -1,5 +1,122 @@
-<p><strong>{{name}}, welcome to Gympoint</strong> - Registration has been approved !!!</br>
-Your plan: <strong>{{title}}</strong> totalizing: <strong>R$ {{price}}</strong></br>
-You start on: <strong>{{firstDay}}</strong></br>
-Your register end on: <strong>{{lastDay}}</strong>
-</p>
+<style>
+*{
+    margin:0;
+    padding: 0;
+    outline: 0;
+    box-sizing: border-box;
+}
+
+body {
+    max-width:700px;
+    margin: 0 auto 20px;
+    text-rendering: optimizeLegibility !important;
+    -webkit-font-smoothing:antialiased !important;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+header {
+    margin-top:20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    line-height: 30px;
+    border-bottom:  1px solid #ee4d64;
+}
+
+header span {
+    font-size:13px;
+    font-style: italic;
+    color:#555;
+}
+
+header img{
+    margin-bottom: 10px;
+}
+
+.data {
+    margin-top:30px;
+    border: 1px solid #ddd;
+    border-radius: 12px;
+    padding: 5px 10px;
+}
+
+.title {
+    font-size:17px;
+    margin-bottom:4px ;
+}
+
+.data ul li {
+    list-style: none;
+    line-height: 30px;
+    margin-left: 20px;
+    font-size:16px;
+}
+
+.data ul li .destaque{
+    padding: 3px;
+    background-color: #ee4d6541;
+    border-radius: 6px;
+    font-size:12px;
+    font-weight: 600;
+}
+
+.info {
+    margin-top:20px;
+    line-height: 18px;
+    font-size: 15px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.info p {
+    border:1px solid #ddd;
+    padding: 5px;
+    border-radius: 6px;
+    width:48%;
+
+}
+
+.info .destaque {
+    font-weight: 600;
+    border-bottom:1px solid #ee4d6470;
+}
+
+footer {
+    margin-top:50px;
+    display:flex ;
+    justify-content: center;
+    font-size:13px;
+    font-weight: bold;
+}
+</style>
+
+<header>
+  <img src="https://github.com/Rocketseat/bootcamp-gostack-desafio-03/blob/master/.github/logo.png?raw=true"/>
+  <h1>{{name}}, Bem-vindo ao Gympoint</h1>
+  <span>É um prazer inenarrável ter você como membro da Gympoint.</span>
+</header>
+
+<div class="data">
+  <p class="title">Alguns dados de sua matrícula:</p>
+  <ul>
+      <li>Seu plano é o <span class="destaque">{{title}}</span>, com duração de <span class="destaque">{{duration}}</span></li>
+      <li>O valor total desse plano é R$ <span class="destaque">{{price}}</span></li>
+      <li>Você inicia na academia em <span class="destaque">{{firstDay}}</span></li>
+      <li>O plano encerra em <span class="destaque">{{lastDay}}</span></li>
+  </ul>
+</div>
+
+<div class="data">
+  <p class="title">Com sua matrícula <strong>{{id}}</strong>:</p>
+  <ul>
+      <li>Você fará seu checkin diário.</li>
+      <li>Poderá tirar dúvidas com a academia.</li>
+      <li>Poderá consultar as repostas, que também serão enviadas por email.</li>
+  </ul>
+</div>
+<div class="info">
+  <p>Nossa academia funciona de <span class="destaque">segunda a sexta</span>, das <span class="destaque">5h às 23h</span>.</p>
+  <p>Temos instrutores disponíveis em todo o período de funcionamento da academia.</p>
+</div>
