--- a/src/app/views/emails/helporder.hbs
+++ b/src/app/views/emails/helporder.hbs
@@ -79,22 +79,22 @@ footer {
 
     <header>
     <img src="https://github.com/Rocketseat/bootcamp-gostack-desafio-03/blob/master/.github/logo.png?raw=true"/>
-    <h1>{{name}}, Você tem uma resposta</h1>
-    <span>É um prazer inenarrável ter você como membro da Gympoint.</span>
+    <h1>{{name}}, You have an answer</h1>
+    <span>It is an indescribable pleasure to have you as a member of Gympoint.</span>
     </header>
 
     <div class="data">
-        <p class="title"><strong>Sua pergunta:</strong></p>
+        <p class="title"><strong>Your question:</strong></p>
         <p>"{{question}}"</p>
         <ul>
-            <li><span class="destaque">{{created_at}}</span></li>
+            <li><span class="destaque">{{create}}</span></li>
         </ul>
     </div>
 
     <div class="data">
-        <p class="title"><strong>Resposta:</strong></p>
+        <p class="title"><strong>Answer:</strong></p>
         <p>"{{answer}}"</p>
         <ul>
-            <li><span class="destaque">{{updated_at}}</span></li>
+            <li><span class="destaque">{{update}}</span></li>
         </ul>
     </div>
