--- a/src/app/views/emails/partials/footer.hbs
+++ b/src/app/views/emails/partials/footer.hbs
@@ -7,4 +7,4 @@ footer {
     font-weight: bold;
   }
 </style>
-<footer><small>Atenciosamente, equipe Gympoint.</small></footer>
+<footer><small>Sincerely, Gympoint Team.</small></footer>
