--- a/src/app/views/emails/welcome.hbs
+++ b/src/app/views/emails/welcome.hbs
@@ -94,29 +94,29 @@ footer {
 
 <header>
   <img src="https://github.com/Rocketseat/bootcamp-gostack-desafio-03/blob/master/.github/logo.png?raw=true"/>
-  <h1>{{name}}, Bem-vindo ao Gympoint</h1>
-  <span>É um prazer inenarrável ter você como membro da Gympoint.</span>
+  <h1>{{name}}, Welcome to Gympoint</h1>
+  <span>It is an indescribable pleasure to have you as a member of Gympoint.</span>
 </header>
 
 <div class="data">
-  <p class="title">Alguns dados de sua matrícula:</p>
+  <p class="title">Some details of your registration:</p>
   <ul>
-      <li>Seu plano é o <span class="destaque">{{title}}</span>, com duração de <span class="destaque">{{duration}}</span></li>
-      <li>O valor total desse plano é R$ <span class="destaque">{{price}}</span></li>
-      <li>Você inicia na academia em <span class="destaque">{{firstDay}}</span></li>
-      <li>O plano encerra em <span class="destaque">{{lastDay}}</span></li>
+      <li>Your plan is the <span class="destaque">{{title}}</span>, duration em months: <span class="destaque">{{duration}}</span></li>
+      <li>The total amount of this plan is R$ <span class="destaque">{{price}}</span></li>
+      <li>You start at the gym in <span class="destaque">{{firstDay}}</span></li>
+      <li>The plan ends in <span class="destaque">{{lastDay}}</span></li>
   </ul>
 </div>
 
 <div class="data">
-  <p class="title">Com sua matrícula <strong>{{id}}</strong>:</p>
+  <p class="title">With your registration <strong>{{id}}</strong>:</p>
   <ul>
-      <li>Você fará seu checkin diário.</li>
-      <li>Poderá tirar dúvidas com a academia.</li>
-      <li>Poderá consultar as repostas, que também serão enviadas por email.</li>
+      <li>You will check in daily.</li>
+      <li>You can ask questions to the gym.</li>
+      <li>You can consult the answers, which will also be sent by email.</li>
   </ul>
 </div>
 <div class="info">
-  <p>Nossa academia funciona de <span class="destaque">segunda a sexta</span>, das <span class="destaque">5h às 23h</span>.</p>
-  <p>Temos instrutores disponíveis em todo o período de funcionamento da academia.</p>
+  <p>Our gym works from <span class="destaque">Monday to Friday</span>, of <span class="destaque">5:00 AM to 11:00 PM</span>.</p>
+  <p>We have instructors available throughout the gym.</p>
 </div>
