Envio de emails

--- a/src/app/views/emails/welcome.hbs
+++ b/src/app/views/emails/welcome.hbs
@@ -101,7 +101,7 @@ footer {
 <div class="data">
   <p class="title">Some details of your registration:</p>
   <ul>
-      <li>Your plan is the <span class="destaque">{{title}}</span>, duration em months: <span class="destaque">{{duration}}</span></li>
+      <li>Your plan is the <span class="destaque">{{title}}</span>, duration in months: <span class="destaque">{{duration}}</span></li>
       <li>The total amount of this plan is R$ <span class="destaque">{{price}}</span></li>
       <li>You start at the gym in <span class="destaque">{{firstDay}}</span></li>
       <li>The plan ends in <span class="destaque">{{lastDay}}</span></li>
